--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
 <body>
 	<h1>Mozilla is cool</h1>
 
+<p>At Mozilla, we're a global community of</p>
+
+	<ul>
+	  <li>technologists</li>
+	  <li>thinkers</li>
+	  <li>builders</li>
+	</ul>
+
+	<p>working together…</p>
+
 </body>
 </html>
