--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 <body>
 	<h1>Mozilla is cool</h1>
 
-<p>At Mozilla, we're a global community of</p>
+		<img src="images/firefox-icon.png" alt="My test image" />
 
-	<ul>
-	  <li>technologists</li>
-	  <li>thinkers</li>
-	  <li>builders</li>
-	</ul>
+	<p>At Mozilla, we're a global community of</p>
+
+		<ul>
+		  <li>technologists</li>
+		  <li>thinkers</li>
+		  <li>builders</li>
+		</ul>
 
 	<p>working together…</p>
+
+	<a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a>
 
 </body>
 </html>
