--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		  <li>builders</li>
 		</ul>
 
-	<p>working together…</p>
+	<p>working together to keep the internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
 
-	<a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a>
+	<p>Read the<a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our msision.<p>
 
 </body>
 </html>
